--- a/_config.yml
+++ b/_config.yml
@@ -26,23 +26,23 @@ description: >- # used by seo meta and the atom feed
 url: ""
 
 github:
-  username: github_username # change to your GitHub username
+  username: iamgopalsahu # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: gopalsahu25 # change to your Twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Gopal Sahu
-  email: example@domain.com # change to your email address
+  email: gopal_sahu@hotmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
+    - https://twitter.com/gopalsahu25 # change to your Twitter homepage
+    - https://github.com/iamgopalsahu # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    - https://www.linkedin.com/in/username
+    - https://www.linkedin.com/in/gopalsahu25
 
 # Site Verification Settings
 webmaster_verifications:
@@ -150,7 +150,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: ""
+baseurl: "https://gopalsahu.in"
 
 # ------------ The following options are not recommended to be modified ------------------
 
