--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ timezone:
 
 title: Gopal Sahu # the main title
 
-tagline: Cloud Data & AI Architect # it will display as the subtitle
+tagline: Cloud Data & AI Architect - Google | 13+ years of experience in Data & AI domain building large scale platforms | Data Engineering & Data Architecture | AI Engineer | MLOps | Generative AI Engineer # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Data Engineering Expert, AI Engineer, Generative AI, Machine Learning, Platform Engineering, AWS, Azure, Databricks, Google Cloud, Kafka, dbt
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
